--- a/settings.ini
+++ b/settings.ini
@@ -3,8 +3,8 @@
 # see https://github.com/fastai/nbdev/blob/master/settings.ini for examples
 
 ### Python Library ###
-lib_name = {lib_name}
-min_python = 3.9
+lib_name = gym
+min_python = 3.10
 version = 0.0.1
 
 ### OPTIONAL ###
@@ -21,21 +21,21 @@ tst_flags = notest
 
 ### Documentation ###
 host = github
-repo = {repo}
-branch = {branch}
+repo = nbdev-gymnastics
+branch = master
 custom_sidebar = False
 
 ### PyPI ### 
 audience = Developers
-author = {author}
-author_email = {author_email}
-copyright = Put your copyright info here
-description = {description}
-keywords = {keywords}
+author = Philip Nuzhnyi
+author_email = philip.nuzhnyy@gmail.com
+copyright = 2024 onwards, Philip Nuzhnyi
+description = Documenting nbdev flow
+keywords = nbdev
 language = English
 license = apache2
 status = 2
-user = {user}
+user = callmephilip
 
 ### Inferred From Other Values ###
 doc_host =  https://%(user)s.github.io
