--- a/settings.ini
+++ b/settings.ini
@@ -14,7 +14,7 @@ version = 0.0.1
 # console_scripts =
 
 ### nbdev ###
-nbs_path = .
+nbs_path = nbs
 doc_path = _docs
 recursive = False
 tst_flags = notest
