add content, move things around

--- a/settings.ini
+++ b/settings.ini
@@ -3,13 +3,13 @@
 # see https://github.com/fastai/nbdev/blob/master/settings.ini for examples
 
 ### Python Library ###
-lib_name = gym
+lib_name = nbdev_gymnastics
 min_python = 3.10
 version = 0.0.1
 
 ### OPTIONAL ###
 
-# requirements = fastcore
+requirements = pyflakes
 # dev_requirements = 
 # console_scripts =
 
