set recursive to True

--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,7 @@ requirements = pyflakes
 ### nbdev ###
 nbs_path = nbs
 doc_path = _docs
-recursive = False
+recursive = True
 tst_flags = notest
 
 ### Documentation ###
